; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_arc.c_arc_state_fini.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_arc.c_arc_state_fini.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { i32, i32* }
%struct.TYPE_8__ = type { i32*, i32, i32* }
%struct.TYPE_7__ = type { i32*, i32, i32* }
%struct.TYPE_10__ = type { i32*, i32, i32* }
%struct.TYPE_9__ = type { i32*, i32, i32* }
%struct.TYPE_11__ = type { i32*, i32, i32* }

@arc_anon = common dso_local global %struct.TYPE_12__* null, align 8
@ARC_BUFC_METADATA = common dso_local global i64 0, align 8
@ARC_BUFC_DATA = common dso_local global i64 0, align 8
@arc_mru = common dso_local global %struct.TYPE_8__* null, align 8
@arc_mru_ghost = common dso_local global %struct.TYPE_7__* null, align 8
@arc_mfu = common dso_local global %struct.TYPE_10__* null, align 8
@arc_mfu_ghost = common dso_local global %struct.TYPE_9__* null, align 8
@arc_l2c_only = common dso_local global %struct.TYPE_11__* null, align 8
@arc_meta_used = common dso_local global i32 0, align 4
@arc_size = common dso_local global i32 0, align 4
@astat_data_size = common dso_local global i32 0, align 4
@astat_metadata_size = common dso_local global i32 0, align 4
@astat_hdr_size = common dso_local global i32 0, align 4
@astat_l2_hdr_size = common dso_local global i32 0, align 4
@astat_bonus_size = common dso_local global i32 0, align 4
@astat_dnode_size = common dso_local global i32 0, align 4
@astat_dbuf_size = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @arc_state_fini to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @arc_state_fini() #0 {
  %1 = load %struct.TYPE_12__*, %struct.TYPE_12__** @arc_anon, align 8
  %2 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %1, i32 0, i32 1
  %3 = load i32*, i32** %2, align 8
  %4 = load i64, i64* @ARC_BUFC_METADATA, align 8
  %5 = getelementptr inbounds i32, i32* %3, i64 %4
  %6 = call i32 @zfs_refcount_destroy(i32* %5)
  %7 = load %struct.TYPE_12__*, %struct.TYPE_12__** @arc_anon, align 8
  %8 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %7, i32 0, i32 1
  %9 = load i32*, i32** %8, align 8
  %10 = load i64, i64* @ARC_BUFC_DATA, align 8
  %11 = getelementptr inbounds i32, i32* %9, i64 %10
  %12 = call i32 @zfs_refcount_destroy(i32* %11)
  %13 = load %struct.TYPE_8__*, %struct.TYPE_8__** @arc_mru, align 8
  %14 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %13, i32 0, i32 2
  %15 = load i32*, i32** %14, align 8
  %16 = load i64, i64* @ARC_BUFC_METADATA, align 8
  %17 = getelementptr inbounds i32, i32* %15, i64 %16
  %18 = call i32 @zfs_refcount_destroy(i32* %17)
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** @arc_mru, align 8
  %20 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %19, i32 0, i32 2
  %21 = load i32*, i32** %20, align 8
  %22 = load i64, i64* @ARC_BUFC_DATA, align 8
  %23 = getelementptr inbounds i32, i32* %21, i64 %22
  %24 = call i32 @zfs_refcount_destroy(i32* %23)
  %25 = load %struct.TYPE_7__*, %struct.TYPE_7__** @arc_mru_ghost, align 8
  %26 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %25, i32 0, i32 2
  %27 = load i32*, i32** %26, align 8
  %28 = load i64, i64* @ARC_BUFC_METADATA, align 8
  %29 = getelementptr inbounds i32, i32* %27, i64 %28
  %30 = call i32 @zfs_refcount_destroy(i32* %29)
  %31 = load %struct.TYPE_7__*, %struct.TYPE_7__** @arc_mru_ghost, align 8
  %32 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %31, i32 0, i32 2
  %33 = load i32*, i32** %32, align 8
  %34 = load i64, i64* @ARC_BUFC_DATA, align 8
  %35 = getelementptr inbounds i32, i32* %33, i64 %34
  %36 = call i32 @zfs_refcount_destroy(i32* %35)
  %37 = load %struct.TYPE_10__*, %struct.TYPE_10__** @arc_mfu, align 8
  %38 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %37, i32 0, i32 2
  %39 = load i32*, i32** %38, align 8
  %40 = load i64, i64* @ARC_BUFC_METADATA, align 8
  %41 = getelementptr inbounds i32, i32* %39, i64 %40
  %42 = call i32 @zfs_refcount_destroy(i32* %41)
  %43 = load %struct.TYPE_10__*, %struct.TYPE_10__** @arc_mfu, align 8
  %44 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %43, i32 0, i32 2
  %45 = load i32*, i32** %44, align 8
  %46 = load i64, i64* @ARC_BUFC_DATA, align 8
  %47 = getelementptr inbounds i32, i32* %45, i64 %46
  %48 = call i32 @zfs_refcount_destroy(i32* %47)
  %49 = load %struct.TYPE_9__*, %struct.TYPE_9__** @arc_mfu_ghost, align 8
  %50 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %49, i32 0, i32 2
  %51 = load i32*, i32** %50, align 8
  %52 = load i64, i64* @ARC_BUFC_METADATA, align 8
  %53 = getelementptr inbounds i32, i32* %51, i64 %52
  %54 = call i32 @zfs_refcount_destroy(i32* %53)
  %55 = load %struct.TYPE_9__*, %struct.TYPE_9__** @arc_mfu_ghost, align 8
  %56 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %55, i32 0, i32 2
  %57 = load i32*, i32** %56, align 8
  %58 = load i64, i64* @ARC_BUFC_DATA, align 8
  %59 = getelementptr inbounds i32, i32* %57, i64 %58
  %60 = call i32 @zfs_refcount_destroy(i32* %59)
  %61 = load %struct.TYPE_11__*, %struct.TYPE_11__** @arc_l2c_only, align 8
  %62 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %61, i32 0, i32 2
  %63 = load i32*, i32** %62, align 8
  %64 = load i64, i64* @ARC_BUFC_METADATA, align 8
  %65 = getelementptr inbounds i32, i32* %63, i64 %64
  %66 = call i32 @zfs_refcount_destroy(i32* %65)
  %67 = load %struct.TYPE_11__*, %struct.TYPE_11__** @arc_l2c_only, align 8
  %68 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %67, i32 0, i32 2
  %69 = load i32*, i32** %68, align 8
  %70 = load i64, i64* @ARC_BUFC_DATA, align 8
  %71 = getelementptr inbounds i32, i32* %69, i64 %70
  %72 = call i32 @zfs_refcount_destroy(i32* %71)
  %73 = load %struct.TYPE_12__*, %struct.TYPE_12__** @arc_anon, align 8
  %74 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %73, i32 0, i32 0
  %75 = call i32 @zfs_refcount_destroy(i32* %74)
  %76 = load %struct.TYPE_8__*, %struct.TYPE_8__** @arc_mru, align 8
  %77 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %76, i32 0, i32 1
  %78 = call i32 @zfs_refcount_destroy(i32* %77)
  %79 = load %struct.TYPE_7__*, %struct.TYPE_7__** @arc_mru_ghost, align 8
  %80 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %79, i32 0, i32 1
  %81 = call i32 @zfs_refcount_destroy(i32* %80)
  %82 = load %struct.TYPE_10__*, %struct.TYPE_10__** @arc_mfu, align 8
  %83 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %82, i32 0, i32 1
  %84 = call i32 @zfs_refcount_destroy(i32* %83)
  %85 = load %struct.TYPE_9__*, %struct.TYPE_9__** @arc_mfu_ghost, align 8
  %86 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %85, i32 0, i32 1
  %87 = call i32 @zfs_refcount_destroy(i32* %86)
  %88 = load %struct.TYPE_11__*, %struct.TYPE_11__** @arc_l2c_only, align 8
  %89 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %88, i32 0, i32 1
  %90 = call i32 @zfs_refcount_destroy(i32* %89)
  %91 = load %struct.TYPE_8__*, %struct.TYPE_8__** @arc_mru, align 8
  %92 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %91, i32 0, i32 0
  %93 = load i32*, i32** %92, align 8
  %94 = load i64, i64* @ARC_BUFC_METADATA, align 8
  %95 = getelementptr inbounds i32, i32* %93, i64 %94
  %96 = load i32, i32* %95, align 4
  %97 = call i32 @multilist_destroy(i32 %96)
  %98 = load %struct.TYPE_7__*, %struct.TYPE_7__** @arc_mru_ghost, align 8
  %99 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %98, i32 0, i32 0
  %100 = load i32*, i32** %99, align 8
  %101 = load i64, i64* @ARC_BUFC_METADATA, align 8
  %102 = getelementptr inbounds i32, i32* %100, i64 %101
  %103 = load i32, i32* %102, align 4
  %104 = call i32 @multilist_destroy(i32 %103)
  %105 = load %struct.TYPE_10__*, %struct.TYPE_10__** @arc_mfu, align 8
  %106 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %105, i32 0, i32 0
  %107 = load i32*, i32** %106, align 8
  %108 = load i64, i64* @ARC_BUFC_METADATA, align 8
  %109 = getelementptr inbounds i32, i32* %107, i64 %108
  %110 = load i32, i32* %109, align 4
  %111 = call i32 @multilist_destroy(i32 %110)
  %112 = load %struct.TYPE_9__*, %struct.TYPE_9__** @arc_mfu_ghost, align 8
  %113 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %112, i32 0, i32 0
  %114 = load i32*, i32** %113, align 8
  %115 = load i64, i64* @ARC_BUFC_METADATA, align 8
  %116 = getelementptr inbounds i32, i32* %114, i64 %115
  %117 = load i32, i32* %116, align 4
  %118 = call i32 @multilist_destroy(i32 %117)
  %119 = load %struct.TYPE_8__*, %struct.TYPE_8__** @arc_mru, align 8
  %120 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %119, i32 0, i32 0
  %121 = load i32*, i32** %120, align 8
  %122 = load i64, i64* @ARC_BUFC_DATA, align 8
  %123 = getelementptr inbounds i32, i32* %121, i64 %122
  %124 = load i32, i32* %123, align 4
  %125 = call i32 @multilist_destroy(i32 %124)
  %126 = load %struct.TYPE_7__*, %struct.TYPE_7__** @arc_mru_ghost, align 8
  %127 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %126, i32 0, i32 0
  %128 = load i32*, i32** %127, align 8
  %129 = load i64, i64* @ARC_BUFC_DATA, align 8
  %130 = getelementptr inbounds i32, i32* %128, i64 %129
  %131 = load i32, i32* %130, align 4
  %132 = call i32 @multilist_destroy(i32 %131)
  %133 = load %struct.TYPE_10__*, %struct.TYPE_10__** @arc_mfu, align 8
  %134 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %133, i32 0, i32 0
  %135 = load i32*, i32** %134, align 8
  %136 = load i64, i64* @ARC_BUFC_DATA, align 8
  %137 = getelementptr inbounds i32, i32* %135, i64 %136
  %138 = load i32, i32* %137, align 4
  %139 = call i32 @multilist_destroy(i32 %138)
  %140 = load %struct.TYPE_9__*, %struct.TYPE_9__** @arc_mfu_ghost, align 8
  %141 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %140, i32 0, i32 0
  %142 = load i32*, i32** %141, align 8
  %143 = load i64, i64* @ARC_BUFC_DATA, align 8
  %144 = getelementptr inbounds i32, i32* %142, i64 %143
  %145 = load i32, i32* %144, align 4
  %146 = call i32 @multilist_destroy(i32 %145)
  %147 = load %struct.TYPE_11__*, %struct.TYPE_11__** @arc_l2c_only, align 8
  %148 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %147, i32 0, i32 0
  %149 = load i32*, i32** %148, align 8
  %150 = load i64, i64* @ARC_BUFC_METADATA, align 8
  %151 = getelementptr inbounds i32, i32* %149, i64 %150
  %152 = load i32, i32* %151, align 4
  %153 = call i32 @multilist_destroy(i32 %152)
  %154 = load %struct.TYPE_11__*, %struct.TYPE_11__** @arc_l2c_only, align 8
  %155 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %154, i32 0, i32 0
  %156 = load i32*, i32** %155, align 8
  %157 = load i64, i64* @ARC_BUFC_DATA, align 8
  %158 = getelementptr inbounds i32, i32* %156, i64 %157
  %159 = load i32, i32* %158, align 4
  %160 = call i32 @multilist_destroy(i32 %159)
  %161 = call i32 @aggsum_fini(i32* @arc_meta_used)
  %162 = call i32 @aggsum_fini(i32* @arc_size)
  %163 = call i32 @aggsum_fini(i32* @astat_data_size)
  %164 = call i32 @aggsum_fini(i32* @astat_metadata_size)
  %165 = call i32 @aggsum_fini(i32* @astat_hdr_size)
  %166 = call i32 @aggsum_fini(i32* @astat_l2_hdr_size)
  %167 = call i32 @aggsum_fini(i32* @astat_bonus_size)
  %168 = call i32 @aggsum_fini(i32* @astat_dnode_size)
  %169 = call i32 @aggsum_fini(i32* @astat_dbuf_size)
  ret void
}

declare dso_local i32 @zfs_refcount_destroy(i32*) #1

declare dso_local i32 @multilist_destroy(i32) #1

declare dso_local i32 @aggsum_fini(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
